# meowdb

./: .dockerignore  .gitignore  .tokeignore  AGENTS.md  ALGORITHM.md  CHANGELOG.md  Dockerfile  Justfile  README.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  local.just  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  deploy.yml  fly-deploy.yml  playwright.yml  screenshots.yml
.hooks/: pre-commit
script/: migrate-from-fly.sh
scripts/: generate_icons.py  post-screenshots.sh
src/meowdb/: __init__.py  build.py  config.py  db.py  display.py  models.py  photos.py  processor.py  similarity.py
src/meowdb/api/: app.py  auth.py  models.py  streaming.py
src/meowdb/api/routers/: audio.py  ingest.py  meows.py  photos.py  stats.py  uniqueness.py
src/meowdb/cli/: __init__.py  __main__.py  archive.py  context.py  helpers.py  options.py
src/meowdb/cli/commands/: delete.py  export_cmd.py  import_cmd.py  ingest.py  list.py  play.py  serve.py  stats.py
src/meowdb/cli/groups/: db.py
src/meowdb/static/: index.html  manifest.webmanifest  sw.js
src/meowdb/static/css/: base.css  components.css  desktop.css  layout.css  views.css
src/meowdb/static/docs/: algorithm.md
src/meowdb/static/js/: api.js  app.js  audio.js  utils.js  waveform.js
src/meowdb/static/js/views/: algorithm.js  ingest.js  library.js  photos.js  play.js  stats.js
tests/: conftest.py
tests/e2e/: conftest.py  test_ingest.py
tests/integration/: conftest.py  test_api.py  test_cli.py  test_export_import.py
tests/unit/: test_db.py  test_media_suffixes.py  test_processor.py  test_similarity.py
ui/: global-setup.ts  package-lock.json  package.json  playwright.config.ts  screenshot.spec.ts  seed.py  views.spec.ts
