[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "meowdb"
version = "0.5.0"
description = "A personal cat meow library"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.12",
    "pydub>=0.25",
    "noisereduce>=3.0",
    "scipy>=1.14",
    "numpy>=2.1",
    "pydantic>=2.0",
    "audioop-lts>=0.2.2; python_version >= '3.13'",
    "bcrypt>=4.0",
    "itsdangerous>=2.0",
    "Pillow>=11.0",
]

[project.scripts]
meowdb = "meowdb.cli:cli_entrypoint"

[dependency-groups]
dev = [
    "mypy>=2.1",
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.5",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
meowdb = ["static/**/*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["I", "F", "UP", "B"]

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.mypy]
strict = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["pydub", "pydub.*", "noisereduce", "noisereduce.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numpy", "numpy.*", "scipy", "scipy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PIL", "PIL.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disable_error_code = ["var-annotated", "type-arg", "no-untyped-def"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=meowdb --cov-report=term-missing -m 'not e2e'"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests using real audio files",
]
